// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellMultiSelect - Snapshot should render default settings correctly 1`] = `
<MultiSelectItem
  isSelected={false}
  onPress={[Function]}
  style={Object {}}
  testID="cellmultiselect"
>
  <CellBase
    avatarProps={
      Object {
        "accountAddress": "0x2990079bcdEe240329a520d2444386FC119da21a",
        "type": "JazzIcon",
        "variant": "Account",
      }
    }
    secondaryText="0x2990079bcdEe240329a520d2444386FC119da21a"
    style={
      Object {
        "flex": 1,
      }
    }
    tagLabel="Imported"
    tertiaryText="Updated 1 sec ago"
    title="Orangefox.eth"
  />
</MultiSelectItem>
`;

exports[`CellMultiSelect - Snapshot should render the proper selected state 1`] = `
<MultiSelectItem
  isSelected={true}
  onPress={[Function]}
  style={Object {}}
  testID="cellmultiselect"
>
  <CellBase
    avatarProps={
      Object {
        "accountAddress": "0x2990079bcdEe240329a520d2444386FC119da21a",
        "type": "JazzIcon",
        "variant": "Account",
      }
    }
    secondaryText="0x2990079bcdEe240329a520d2444386FC119da21a"
    style={
      Object {
        "flex": 1,
      }
    }
    tagLabel="Imported"
    tertiaryText="Updated 1 sec ago"
    title="Orangefox.eth"
  />
</MultiSelectItem>
`;
